# germanymod-pc

./: .gitignore  CMakeLists.txt  structure.txt  test.c
simple-joiner/: CMakeLists.txt  README.md  WEBSOCKET_MIGRATION.md  test_injection.bat
simple-joiner/dependencies/il2cpp/backend/: api-function.hpp  types.hpp
simple-joiner/dependencies/il2cpp/exceptions/: ExceptionBase.cpp  UnresolvedMappingQueue.hpp
simple-joiner/dependencies/il2cpp/misc/: CommonGameStructs.hpp
simple-joiner/dependencies/il2cpp/service/: ClassMapping.cpp  ClassMapping.hpp  Dumper.cpp
simple-joiner/dependencies/il2cpp/structures/: Class.cpp  Class.hpp  MethodInfo.cpp  Object.cpp  Object.hpp  String.cpp  String.hpp
simple-joiner/dependencies/il2cpp/structures/generic/: List.hpp
simple-joiner/dependencies/il2cpp/structures/misc/: PatternStructs.cpp
simple-joiner/dependencies/il2cpp/wrapper/: MethodWrapper.hpp
simple-joiner/dependencies/imgui/: imconfig.h  imgui.h  imgui_internal.h
simple-joiner/dependencies/logger/: Logger.cpp  Logger.hpp
simple-joiner/docs/: BUILD_GUIDE.md  COMPLETE.md  FINAL_GUIDE.md  FIXED_GUIDE.md  INJECTION_WAYS.md  OFFSET_UPDATE_GUIDE.md  ORGANIZATION.md  QUICKSTART.md  QUICK_REF.md  README.md  SIMPLE_GUIDE.md  STRUCTURE_FIX.md  USAGE_GUIDE.md
simple-joiner/scripts/: build.bat  build_test.bat  package-fixed.bat  package-full.bat  package.bat  package.sh
simple-joiner/src/: all-in-one_joiner.cpp  enhanced_joiner.cpp  injector.cpp  simple_joiner.cpp  standalone_joiner.cpp  test_dll.cpp  ultimate_joiner.cpp  websocket_joiner.cpp
simple-joiner/src/runtime/framework/backend/: Kiero.cpp  Kiero.hpp  UIBackend.cpp  UIBackend.hpp
simple-joiner/src/runtime/game/: Functions.cpp  Functions.hpp
simple-joiner/src/runtime/game/import/: ClassFinder.cpp  ClassFinder.hpp  PointerFunctions.hpp  Structs.hpp
simple-joiner/src/runtime/game/structures/: DictionaryBuilder.cpp  DictionaryBuilder.hpp  PointerWrapper.cpp  PointerWrapper.hpp  Stacktrace.cpp  Stacktrace.hpp
simple-joiner/src/runtime/game/websocket/: AccountCommands.cpp  AccountCommands.hpp  ClanCommands.cpp  ClanCommands.hpp  MessageBuilder.cpp  MessageBuilder.hpp  SquadCommands.cpp  SquadCommands.hpp  WebsocketCore.cpp  WebsocketCore.hpp
simple-joiner/src/runtime/util/: HookingUtil.cpp  HookingUtil.hpp
src/loader/: main.cpp
src/runtime/: Bootstrap.cpp
src/runtime/game/: GameplayMain.cpp  GameplayMain.hpp  Menu.cpp
src/runtime/game/import/: PointerFunctions.cpp
src/runtime/game/websocket/: WebsocketCore.cpp
